PS-lab.yaml
# Namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: lincoln
---
apiVersion: v1
kind: Namespace
metadata:
  name: michael
---
apiVersion: v1
kind: Namespace
metadata:
  name: t-bag
---
apiVersion: v1
kind: Namespace
metadata:
  name: prison-break
---
# Deployment for the Watch Script
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ps-watcher
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ps-watcher
  template:
    metadata:
      labels:
        app: ps-watcher
    spec:
      containers:
      - name: ps-watcher
        image: golansami/ps-lab
        command: ["python3"]
        args: ["/tmp/pod-security-watch.py"]
      restartPolicy: Always
---
# lincoln pods
apiVersion: v1
kind: Pod
metadata:
  name: penitentiary
  namespace: lincoln
spec:
  securityContext:
    seccompProfile:
      type: Localhost
      localhostProfile: state.json
  containers:
  - name: cell-block-c
    image: alpine
    command:
      - "sleep"
      - "3600"
---
apiVersion: v1
kind: Pod
metadata:
  name: sona
  namespace: lincoln
spec:
  containers:
  - name: federal-penitentiary
    image: alpine
    command:
      - "sleep"
      - "3600"
    securityContext:
      readOnlyRootFilesystem: true
      allowPrivilegeEscalation: false
---
# michael pods
apiVersion: v1
kind: Pod
metadata:
  name: ogygia
  namespace: michael
spec:
  containers:
  - name: sanaa
    image: alpine
    command:
      - "sleep"
      - "3600"
---
apiVersion: v1
kind: Pod
metadata:
  name: yemen
  namespace: michael
spec:
  securityContext:
    runAsUser: 1001
  containers:
  - name: kaniel-outis
    image: alpine
    command:
      - "sleep"
      - "3600"
---
# t-bag pods
apiVersion: v1
kind: Pod
metadata:
  name: bolshoi-booze
  namespace: t-bag
spec:
  containers:
  - name: mexico
    image: alpine
    command:
      - "seep"
      - "e600"
---
apiVersion: v1
kind: Pod
metadata:
  name: banko-de-versailles
  namespace: t-bag
spec:
  containers:
  - name: panama
    image: alpine
    command:
      - "surrender"
