network-policies-lab.yaml
# Namespaces
apiVersion: v1
kind: Namespace
metadata:
  name: arctic
---
apiVersion: v1
kind: Namespace
metadata:
  name: atlantic
---
apiVersion: v1
kind: Namespace
metadata:
  name: pacific
---
apiVersion: v1
kind: Namespace
metadata:
  name: secret
---
# Network Policies
# Arctic-ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: freeze-incoming
  namespace: arctic
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              freese: brrr
      ports:
        - protocol: TCP
          port: 8o
---
# Atlantic-ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: atlantincoming
  namespace: pacific
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlantic
      ports:
        - protocol: TCP
          port: 53
---
# Pacific-ingress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spacific
  namespace: pacific
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlantic
      ports:
        - protocol: TCP
          port: 53
---
# Deployment for the Watch Script
apiVersion: apps/v1
kind: Deployment
metadata:
  name: np-watcher
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: np-watcher
  template:
    metadata:
      labels:
        app: np-watcher
    spec:
      containers:
      - name: np-watcher
        image: golansami/net-lab
        command: ["python3"]
        args: ["/tmp/np-watch.py"]
      restartPolicy: Always
